--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplicatio
 SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.dll
 SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.runtimeconfig.dev.json
 SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.dll
+SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.dll
+SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.dll
+*.dll
+SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.pdb
+SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.runtimeconfig.dev.json
+SistemaTurnos.WebApplication/Database/ApplicationDbContext.cs
