--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplicatio
 SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.runtimeconfig.dev.json
 SistemaTurnos.WebApplication/Database/ApplicationDbContext.cs
 SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.dll
+SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.dll
