--- a/SistemaTurnos.WebApplication/SistemaTurnos.WebApplication.csproj
+++ b/SistemaTurnos.WebApplication/SistemaTurnos.WebApplication.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="WebApi\Dto\Select\**" />
+    <Content Remove="WebApi\Dto\Select\**" />
+    <EmbeddedResource Remove="WebApi\Dto\Select\**" />
+    <None Remove="WebApi\Dto\Select\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="MySql.Data.Core" Version="7.0.4-IR-191" />
@@ -22,10 +29,6 @@
 
   <ItemGroup>
     <None Include="wwwroot\index.html" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="WebApi\Dto\Select\" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
