--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ SistemaTurnos.WebApplication/Database/ApplicationDbContext.cs
 SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.dll
 SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.dll
 SistemaTurnos.WebApplication/bin/Debug/netcoreapp2.0/SistemaTurnos.WebApplication.dll
+*.dll
+*.pdb
