--- a/SistemaTurnos.Populator/SistemaTurnos.Populator.csproj
+++ b/SistemaTurnos.Populator/SistemaTurnos.Populator.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaTurnos.Commons\SistemaTurnos.Commons.csproj" />
+    <ProjectReference Include="..\SistemaTurnos.Database\SistemaTurnos.Database.csproj" />
+  </ItemGroup>
+
 </Project>
